MULE-12245: remove endorsed xml libraries